--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@feizheng/render-null-decorator",
+  "name": "@jswork/render-null-decorator",
   "version": "1.0.0",
   "description": "Render null for react.",
   "homepage": "https://github.com/afeiship/render-null-decorator",
@@ -10,6 +10,13 @@
   "main": "index.js",
   "license": "MIT",
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org/"
+  },
+  "scripts": {
+    "release": "release-it"
+  },
+  "devDependencies": {
+    "release-it": "^14.4.1"
   }
 }
